[project]
name = "bluesky-list-cluster"
version = "0.1.0"
description = "Find accounts similar to those in a Bluesky list."
authors = [
    {name = "gudzpoz", email = "gudzpoz@live.com"},
]
dependencies = ["atproto>=0.0.58"]
requires-python = ">=3.10,<3.14"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
bsky-cluster = "bluesky_list_cluster.__main__:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
