[project]
name = "private"
version = "0.1.0"
dependencies = []
requires-python = ">=3.10,<3.13"

[tool.pdm.dev-dependencies]
dev = [
    "-e clusterer @ file:///${PROJECT_ROOT}/clusterer",
    "-e nsfw-vit @ file:///${PROJECT_ROOT}/nsfw-vit",
]

[tool.pdm.resolution]
respect-source-order = true

[[tool.pdm.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
verify_ssl = true

[[tool.pdm.source]]
name = "pypi"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
verify_ssl = true

[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true
